fixed overlap with css styles that have the same name in different files

--- a/frontend/src/Styles/Profile.css
+++ b/frontend/src/Styles/Profile.css
@@ -222,9 +222,15 @@ li.nav-item {
     flex-wrap: wrap;
 }*/
 
-#reviewCard{
+#reviewCardPage{
     border: solid;
     border-radius: 5px;
     border-width: 4px;
     color:beige;
+    /* this was needed from cerealCard css, there was overlap */
+    background-color: transparent;
+    width: 85%; 
+    height: auto; 
+    font-size: 1rem;
+    padding: 0.6em 0.8em 0 0.8em; 
 }
